# drone-object-detection

./: .gitignore  pyproject.toml
src/drone_object_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
